--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
     <div class = "container">
             <div class = "aligner">
                 <div class = "calculator">
-                    <div class = "display"></div>
-                    <div class = "btn-container">
-                        <div class = 'btn-7'><button>7</button></div>
-                        <div class = 'btn-8'><button>8</button></div>
-                        <div class = 'btn-9'><button>9</button></div>
-                        <div class = 'btn-divide'><button>÷</button></div>
-                        <div class = 'btn-4'><button>4</button></div>
-                        <div class = 'btn-5'><button>5</button></div>
-                        <div class = 'btn-6'><button>6</button></div>
-                        <div class = 'btn-multiply'><button>X</button></div>
-                        <div class = 'btn-1'><button>1</button></div>
-                        <div class = 'btn-2'><button>2</button></div>
-                        <div class = 'btn 3'><button>3</button></div>
-                        <div class = 'btn-subtract'><button>-</button></div>
-                        <div class = "btn-percent"><button>%</button></div>
-                        <div class = 'btn-0'><button>0</button></div>
-                        <div class = 'btn-dot'><button>.</button></div>
-                        <div class = 'btn-equals'><button id = "equals">=</button></div>
+                    <div class = "display">
+                        <div data-sum class = "sum"></div>
+                        <div data-answer class = "answer"></div>
                     </div>
+                    <div class = "btn-container">
+                        <div><button data-number>7</button></div>
+                        <div><button data-number>8</button></div>
+                        <div><button data-number>9</button></div>
+                        <div><button data-operation>÷</button></div>
+                        <div><button data-number>4</button></div>
+                        <div><button data-number>5</button></div>
+                        <div><button data-number>6</button></div>
+                        <div><button data-operation>X</button></div>
+                        <div><button data-number>1</button></div>
+                        <div><button data-number>2</button></div>
+                        <div><button data-number>3</button></div>
+                        <div><button data-operation>-</button></div>
+                        <div><button data-number>.</button></div>
+                        <div><button data-number>0</button></div>
+                        <div><button data-equals>=</button></div>
+                        <div><button data-operation>+</button></div>
+                    </div>
+                    <div><button data-clear class = "clear">CLEAR</button><button data-delete class = "delete">DELETE</button></div>
+                    
                 </div>
             </div>    
     </div>
