changed color scheme and styling. Added footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <script src="https://kit.fontawesome.com/b726881b37.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class = "container">
@@ -37,7 +38,8 @@
                     
                 </div>
             </div>    
-    </div>
+        </div>
+    <footer><a href = "https://github.com/benlaird7">Ⓒ benlaird7 <i class="fa fa-github fa-xl fa-spin" aria-hidden="true"></i></a></footer>
     <script src = "./script.js"></script>
 </body>
 </html>
